--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
+
+jwt.secret=MINHA_CHAVE_SUPER_SECRETA_123456789
+jwt.expiration=86400000
